--- a/metadata.yaml
+++ b/metadata.yaml
@@ -24,5 +24,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'BL'
 - !lcsh 'Zhuangzi'
+- GITenberg
 title: 莊子的故事
 url: http://www.gutenberg.org/ebooks/23913
